kata 8 solved